Pushing 3rd class code styling has been done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,16 +54,18 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/images/pesuiologo.png
+    - assets/images/
 
   fonts:
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
-    - family: Lato
+    - family: Playfair Display SC
       fonts:
-        - asset: assets/fonts/Lato-Regular.ttf
-
+        - asset: assets/fonts/PlayfairDisplaySC-Black.ttf
+    - family: Yeseva One
+      fonts:
+        - asset: assets/fonts/YesevaOne-Regular.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
